force-app/main/default/objects/cgcloud__Condition_Search_Rule__c/cgcloud__Condition_Search_Rule__c.object-meta.xml
<CustomObject>
    <description>This object holds the attributes of Condition Search Rule.</description>
    <label>Condition Search Rule</label>
    <nameField>
        <displayFormat>CSR-{000000}</displayFormat>
        <label>Condition Search Rule Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Condition Search Rules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>