force-app/main/default/objects/cgcloud__Condition_Search_Rule__c/fields/cgcloud__Account_Dimension__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Account_Dimension__c</fullName>
    <description>Defines the account hierarchical node to start condition search from.</description>
    <inlineHelpText>Defines the account hierarchical node to start condition search from.</inlineHelpText>
    <label>Account Dimension</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>cgcloud__Condition_Anchor__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not_Relevant</fullName>
            </value>
            <value>
                <fullName>Exact</fullName>
                <default>true</default>
                <label>Exact</label>
            </value>
            <value>
                <fullName>Bottom_Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>