force-app/main/default/objects/cgcloud__Condition_Search_Rule__c/fields/cgcloud__Condition_Anchor__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Condition_Anchor__c</fullName>
    <description>The source table from which the conditions need to be searched from.</description>
    <inlineHelpText>The source table from which the conditions need to be searched from.</inlineHelpText>
    <label>Condition Anchor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account_Product</fullName>
                <default>true</default>
                <label>Account_Product</label>
            </value>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>