force-app/main/default/objects/cgcloud__Condition_Search_Rule__c/fields/cgcloud__Condition_Search_Group__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Condition_Search_Group__c</fullName>
    <description>Reference to the Condition Search Group object.</description>
    <label>Condition Search Group</label>
    <referenceTo>cgcloud__Condition_Search_Group__c</referenceTo>
    <relationshipLabel>Condition Search Rules</relationshipLabel>
    <relationshipName>Condition_Search_Rules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>