force-app/main/default/objects/cgcloud__Condition_Search_Rule__c/fields/cgcloud__Dimension_Priority__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Dimension_Priority__c</fullName>
    <description>Defines the search order of the different dimensions.</description>
    <inlineHelpText>Defines the search order of the different dimensions.</inlineHelpText>
    <label>Dimension Priority</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account_Product</fullName>
            </value>
            <value>
                <fullName>Product_Account</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>