force-app/main/default/objects/cgcloud__Condition_Search_Rule__c/fields/cgcloud__Measure_Code__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Measure_Code__c</fullName>
    <description>Holds the code for the condition type of the conditions records to be retrieved.</description>
    <label>Measure Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>