force-app/main/default/objects/cgcloud__Condition_Search_Rule__c/fields/cgcloud__Search_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Search_Type__c</fullName>
    <description>Defines the strategy to be used for search conditions across product and account hierarchies.</description>
    <inlineHelpText>Defines the strategy to be used for search conditions across product and account hierarchies.</inlineHelpText>
    <label>Search Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>First_Hit</fullName>
                <default>true</default>
                <label>First_Hit</label>
            </value>
            <value>
                <fullName>Collection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>