force-app/main/default/objects/cgcloud__Condition_Search_Rule__c/validationRules/cgcloud__Check_Acc_And_Prod_Dimension_NotRelevant.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_Acc_And_Prod_Dimension_NotRelevant</fullName>
    <active>true</active>
    <description>Account Dimension and Product Dimension must not be set as &apos;Not Relevant&apos; if Condition Anchor is selected as &apos;Account Product&apos;.</description>
    <errorConditionFormula>AND(ISPICKVAL(cgcloud__Condition_Anchor__c,&quot;Account_Product&quot;), OR(ISPICKVAL(cgcloud__Account_Dimension__c,&quot;Not_Relevant&quot;),ISPICKVAL(cgcloud__Product_Dimension__c,&quot;Not_Relevant&quot;)))</errorConditionFormula>
    <errorMessage>Account Dimension and Product Dimension must not be set as &apos;Not Relevant&apos; if Condition Anchor is selected as &apos;Account Product&apos;.</errorMessage>
</ValidationRule>