force-app/main/default/objects/cgcloud__Condition_Search_Rule__c/validationRules/cgcloud__Check_Account_Dimension_Not_Relevant.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_Account_Dimension_Not_Relevant</fullName>
    <active>true</active>
    <description>Account Dimension must not be set as &apos;Not Relevant&apos; if Condition Anchor is selected as &apos;Account&apos;.</description>
    <errorConditionFormula>AND(ISPICKVAL(cgcloud__Condition_Anchor__c,&quot;Account&quot;), ISPICKVAL(cgcloud__Account_Dimension__c,&quot;Not_Relevant&quot;))</errorConditionFormula>
    <errorDisplayField>cgcloud__Account_Dimension__c</errorDisplayField>
    <errorMessage>Account Dimension must not be set as &apos;Not Relevant&apos; if Condition Anchor is selected as &apos;Account&apos;.</errorMessage>
</ValidationRule>