force-app/main/default/objects/cgcloud__Condition_Search_Rule__c/validationRules/cgcloud__Check_If_Condition_Anchor_NotEmpty.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_If_Condition_Anchor_NotEmpty</fullName>
    <active>true</active>
    <description>Condition Anchor can&apos;t be empty.</description>
    <errorConditionFormula>ISPICKVAL(cgcloud__Condition_Anchor__c, &apos;&apos;)</errorConditionFormula>
    <errorDisplayField>cgcloud__Condition_Anchor__c</errorDisplayField>
    <errorMessage>Condition Anchor can&apos;t be empty.</errorMessage>
</ValidationRule>