force-app/main/default/objects/cgcloud__Condition_Search_Rule__c/validationRules/cgcloud__Check_If_Measure_Code_NotEmpty.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_If_Measure_Code_NotEmpty</fullName>
    <active>true</active>
    <description>Measure Code can&apos;t be empty.</description>
    <errorConditionFormula>ISBLANK(cgcloud__Measure_Code__c)</errorConditionFormula>
    <errorDisplayField>cgcloud__Measure_Code__c</errorDisplayField>
    <errorMessage>Measure Code can&apos;t be empty.</errorMessage>
</ValidationRule>