force-app/main/default/objects/cgcloud__Condition_Search_Rule__c/validationRules/cgcloud__Check_If_Product_Dimension_NotEmpty.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_If_Product_Dimension_NotEmpty</fullName>
    <active>true</active>
    <description>Product Dimension can&apos;t be empty.</description>
    <errorConditionFormula>ISPICKVAL(cgcloud__Product_Dimension__c, &apos;&apos;)</errorConditionFormula>
    <errorDisplayField>cgcloud__Product_Dimension__c</errorDisplayField>
    <errorMessage>Product Dimension can&apos;t be empty.</errorMessage>
</ValidationRule>