force-app/main/default/objects/cgcloud__Condition_Search_Rule__c/validationRules/cgcloud__Check_If_Search_Type_NotEmpty.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_If_Search_Type_NotEmpty</fullName>
    <active>true</active>
    <description>Search Type can&apos;t be empty.</description>
    <errorConditionFormula>ISPICKVAL(cgcloud__Search_Type__c, &apos;&apos;)</errorConditionFormula>
    <errorDisplayField>cgcloud__Search_Type__c</errorDisplayField>
    <errorMessage>Search Type can&apos;t be empty.</errorMessage>
</ValidationRule>