force-app/main/default/objects/cgcloud__Condition_Search_Rule__c/validationRules/cgcloud__Check_Product_Dimension_Not_Relevant.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Check_Product_Dimension_Not_Relevant</fullName>
    <active>true</active>
    <description>Product Dimension must not be set as &apos;Not Relevant&apos; if Condition Anchor is selected as &apos;Product&apos;.</description>
    <errorConditionFormula>AND(ISPICKVAL(cgcloud__Condition_Anchor__c,&quot;Product&quot;), ISPICKVAL(cgcloud__Product_Dimension__c,&quot;Not_Relevant&quot;))</errorConditionFormula>
    <errorDisplayField>cgcloud__Product_Dimension__c</errorDisplayField>
    <errorMessage>Product Dimension must not be set as &apos;Not Relevant&apos; if Condition Anchor is selected as &apos;Product&apos;.</errorMessage>
</ValidationRule>